--- a/index.html
+++ b/index.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Diks Ekspress Ultimate</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Diks Ekspress Ultimate</title>
+
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0d6efd">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<h1>Diks Ekspress Ultimate</h1>
-<label><input type="checkbox" id="dark-toggle"> Dark Mode</label>
+  <h1>Diks Ekspress Ultimate</h1>
 
-<h2>Filter Kategori:</h2>
-<select id="category-filter" onchange="loadProducts()">
-  <option value="">Semua Kategori</option>
-  <option value="Electronics">Electronics</option>
-  <option value="Fashion">Fashion</option>
-</select>
+  <label>
+    <input type="checkbox" id="dark-toggle"> Dark Mode
+  </label>
 
-<h2>Filter Negara:</h2>
-<select id="country-filter" onchange="loadProducts()">
-  <option value="">Semua Negara</option>
-  <option value="Indonesia">Indonesia</option>
-  <option value="USA">USA</option>
-  <option value="Japan">Japan</option>
-  <option value="France">France</option>
-</select>
+  <h2>Filter Kategori:</h2>
+  <select id="category-filter" onchange="loadProducts()">
+    <option value="">Semua Kategori</option>
+    <option value="Electronics">Electronics</option>
+    <option value="Fashion">Fashion</option>
+  </select>
 
-<h2>Produk:</h2>
-<ul id="product-list"></ul>
+  <h2>Filter Negara:</h2>
+  <select id="country-filter" onchange="loadProducts()">
+    <option value="">Semua Negara</option>
+    <option value="Indonesia">Indonesia</option>
+    <option value="USA">USA</option>
+    <option value="Japan">Japan</option>
+    <option value="France">France</option>
+  </select>
 
-<h2>Keranjang:</h2>
-<ul id="cart-list"></ul>
-<button onclick="checkout()">Checkout</button>
+  <h2>Produk:</h2>
+  <ul id="product-list"></ul>
 
-<h2>Wishlist:</h2>
-<ul id="wishlist-list"></ul>
+  <h2>Keranjang:</h2>
+  <ul id="cart-list"></ul>
+  <button onclick="checkout()">Checkout</button>
 
-<h2>Review & Rating:</h2>
-<ul id="review-list"></ul>
+  <h2>Wishlist:</h2>
+  <ul id="wishlist-list"></ul>
 
-<div id="toast"></div>
+  <h2>Review & Rating:</h2>
+  <ul id="review-list"></ul>
 
-<script src="app.js"></script>
+  <div id="toast"></div>
+
+  <script src="app.js"></script>
+
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js");
+    }
+  </script>
 </body>
-</html>
+      </html>
